# XqqytDesktop

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Events.txt  README.md  README_en.md  README_zh.md  build.sh  devices-example.json  main.cpp  settings-example.json
Control/: CMakeLists.txt
Control/include/: ConfigController.h  DevicelistManager.h  EventBus.h  MessageParser.h  NetworkController.h  NetworkOperator.h  Operator.h  SettingInfo.h  SignalMessageParser.h  TransferFiles.h  UserInfo.h  WebrtcController.h
Control/include/ThreadPool/: Queue.h  ThreadPool.hpp
Control/include/UserServerMsgParser/: BinaryStrategyUser.h  JsonStrategyUser.h  StrategyInterface.h  UserServerMsgParser.h
Control/source/: ConfigController.cpp  EventBus.cpp  MessageParser.cpp  NetworkController.cpp  SettingInfo.cpp  SignalMessageParser.cpp  WebrtcController.cpp
Control/source/UserServerMsgParser/: BinaryStrategyUser.cpp  JsonStrategyUser.cpp  StrategyInterface.cpp  UserServerParser.cpp
Doc/: Package.md  项目概述.md
Driver/: CMakeLists.txt
Driver/include/: ConfigDriver.h  NlohmannJson.h  OpensslDriver.h  WebSocket.h  websocket.h
Driver/include/AudioDriver/Capturer/: PipeWireAudioCapture.h  PulseAudioCapture.h
Driver/include/AudioDriver/Player/: PipeWireAudioPlayer.h  PulseAudioPlayer.h
Driver/include/ClipboardDriver/: X11.h  X11ClipboardDriver.h
Driver/include/KeyboardMouseDriver/: X11.h  X11KeyboardMouseDriver.h
Driver/include/MsgBuilder/: UserServerMsgBuilder.h
Driver/include/NetworkDriver/: TcpDriver.h  WebSocket.h
Driver/include/WebRTC/: ControlDataChannelObserver.h  DataChannelObserver.h  DesktopAudioSource.h  DesktopCaptureSource.h  FileDataChannelObserver.h  FileReceiver.h  FileSender.h  PeerConnectionObserver.h  PulseAudioCapture.h  SdpObserver.h  VideoRender.h  WebRTC.h
Driver/source/: ConfigDriver.cpp  NlohmannJson.cpp  OpensslDriver.cpp  WebSocket.cpp  websocket.cpp
Driver/source/AudioDriver/Capturer/: PipeWireAudioCapture.cpp  PulseAudioCapture.cpp
Driver/source/AudioDriver/Player/: PipeWireAudioPlayer.cpp  PulseAudioPlayer.cpp
Driver/source/ClipboardDriver/: X11.cpp  X11ClipboardDriver.cpp
Driver/source/KeyboardMouseDriver/: X11.cpp  X11KeyboardMouseDriver.cpp
Driver/source/MsgBuilder/: UserServerMsg.cpp
Driver/source/NetworkDriver/: TcpDriver.cpp  WebSocket.cpp
Driver/source/WebRTC/: ControlDataChannelObserver.cpp  DataChannelObserver.cpp  DesktopCaptureSource.cpp  FileDataChannelObserver.cpp  FileReceiver.cpp  FileSender.cpp  PeerConnectionObserver.cpp  PulseAudioCapture.cpp  SdpObserver.cpp  VideoRender.cpp  WebRTC.cpp
Driver_Interface/: CMakeLists.txt  Network.h
Driver_Interface/include/: Clipboard.h  Config.h  GlobalEnum.h  JsonFactory.h  KeyboardMouseOperator.h  MouseKeyboardType.h  MsgBuilderInterface.h  Network.h  Render.h  SecurityInterface.h  WebRTCInterface.h
Driver_Interface/source/: JsonFactory.cpp  Network.cpp
Resources/: res.qrc
Translations/: XqqytDesktop_en_EN.ts  XqqytDesktop_zh_CN.qm  (+1 more)
UI/: CMakeLists.txt
UI/ConnectWidget/: CMakeLists.txt  ConnectWidget.cpp  ConnectWidget.h  ConnectWidget.ui
UI/DeviceWidget/: CMakeLists.txt  DeviceWidget.cpp  DeviceWidget.h  DeviceWidget.ui
UI/DeviceWidget/DeviceItem/: CMakeLists.txt  DeviceItem.cpp  DeviceItem.h  DeviceItem.ui
UI/DeviceWidget/DeviceItem/EditDeviceCommentDialog/: EditDeviceCommentDialog.cpp  EditDeviceCommentDialog.h  EditDeviceCommentDialog.ui
UI/DeviceWidget/DeviceItem/MoreDialog/: MoreDialog.cpp  MoreDialog.h  MoreDialog.ui
UI/Dialog/: CMakeLists.txt
UI/Dialog/Dialog/ConfirmBeConnectDialog/: ConfirmBeConnectDialog.cpp  ConfirmBeConnectDialog.h  ConfirmBeConnectDialog.ui
UI/Dialog/Dialog/ConfirmDialog/: ConfirmDialog.cpp  ConfirmDialog.h  ConfirmDialog.ui
UI/Dialog/Dialog/GeneralLineEditDialog/: GeneralLineEditDialog.cpp  GeneralLineEditDialog.h  GeneralLineEditDialog.ui
UI/Dialog/Dialog/InfoDialog/: InfoDialog.cpp  InfoDialog.h  InfoDialog.ui
UI/Dialog/Dialog/KeyAuthenticationDialog/: KeyAuthenticationDialog.cpp  KeyAuthenticationDialog.h  KeyAuthenticationDialog.ui
UI/Dialog/Dialog/LoadingDialog/: LoadingDialog.cpp  LoadingDialog.h  LoadingDialog.ui
UI/Dialog/Dialog/LoginDialog/: LoginDialog.cpp  LoginDialog.h  LoginDialog.ui
UI/Dialog/Dialog/RegisterDialog/: RegisterDialog.cpp  RegisterDialog.h  RegisterDialog.ui
UI/Dialog/Dialog/UpdateDialog/: UpdateDialog.cpp  UpdateDialog.h  UpdateDialog.ui
UI/Dialog/Notify/: BubbleMessage.cpp  BubbleMessage.h
UI/MainWidget/: CMakeLists.txt  MainWidget.cpp  MainWidget.h  MainWidget.ui
UI/RemoteControlWidget/: CMakeLists.txt  RemoteControlWidget.cpp  RemoteControlWidget.h  RemoteControlWidget.ui
UI/RemoteControlWidget/InputHandler/: InputHandler.cpp  InputHandler.h
UI/RemoteControlWidget/OpenGLWidget/: CMakeLists.txt  OpenGLWidget.cpp  OpenGLWidget.h
UI/RemoteControlWidget/QImageWidget/: QImageWidget.cpp  QImageWidget.h
UI/RemoteControlWidget/RenderWidgetInterface/: RenderWidgetInterface.h
UI/SettingsWidget/: CMakeLists.txt  SettingsWidget.cpp  SettingsWidget.h  SettingsWidget.ui
UI/SettingsWidget/ItemWidget/: CMakeLists.txt
UI/SettingsWidget/ItemWidget/AboutWidget/: AboutWidget.cpp  AboutWidget.h  AboutWidget.ui
UI/SettingsWidget/ItemWidget/DisplayWidget/: DisplayWidget.cpp  DisplayWidget.h  DisplayWidget.ui
UI/SettingsWidget/ItemWidget/GeneralWidget/: GeneralWidget.cpp  GeneralWidget.h  GeneralWidget.ui
UI/SettingsWidget/ItemWidget/NetworkWidget/: NetworkWidget.cpp  NetworkWidget.h  NetworkWidget.ui
UI/SettingsWidget/ItemWidget/SecurityWidget/: SecurityWidget.cpp  SecurityWidget.h  SecurityWidget.ui
UI/TransferHubWidget/: CMakeLists.txt  TransferHubWidget.cpp  TransferHubWidget.h  TransferHubWidget.ui
UI/TransferHubWidget/Fileitem/: Fileitem.cpp  Fileitem.h
UI/TransferHubWidget/RoundedScrollArea/: RoundedScrollArea.cpp  RoundedScrollArea.h
UI/UserProfileWidget/: CMakeLists.txt  UserProfileWidget.cpp  UserProfileWidget.h  UserProfileWidget.ui
UI/WidgetManager/: CMakeLists.txt  WidgetManager.cpp  WidgetManager.h
UI/utils/: CMakeLists.txt  utils.cpp  utils.h
(+50 files in other folders)
